// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DOM shared by all flex containers 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
/>
`;

exports[`renders DOM specific to a flex container with elements aligned at the end 1`] = `
Diff:
- <BaseComponent />
+ <CompareComponent />

@@ -8,6 +8,10 @@
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
+   -webkit-box-pack: end;
+   -webkit-justify-content: flex-end;
+   -ms-flex-pack: end;
+   justify-content: flex-end;
  }
  
  <div
`;

exports[`renders DOM specific to a flex container with elements aligned in the center 1`] = `
Diff:
- <BaseComponent />
+ <CompareComponent />

@@ -8,6 +8,10 @@
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
+   -webkit-box-pack: center;
+   -webkit-justify-content: center;
+   -ms-flex-pack: center;
+   justify-content: center;
  }
  
  <div
`;

exports[`renders DOM specific to a flex container with space between elements 1`] = `
Diff:
- <BaseComponent />
+ <CompareComponent />

@@ -8,6 +8,10 @@
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
+   -webkit-box-pack: justify;
+   -webkit-justify-content: space-between;
+   -ms-flex-pack: justify;
+   justify-content: space-between;
  }
  
  <div
`;
